Fix styling on iphone 5/SE

--- a/src/components/popup/details/details.less
+++ b/src/components/popup/details/details.less
@@ -31,10 +31,6 @@
 		min-height: 0;
 		overflow: auto;
 		-webkit-overflow-scrolling: touch;
-
-		@media @smartphone {
-			padding: 40px 5px 5px 5px;
-		}
 	}
 
 	.footer {
